# energy-management-monitor

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_signal_type_to_forecast_runs.py  0003_update_demo_market_zones.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: __init__.py  logging.py  middleware.py  settings.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/repositories/: __init__.py  common.py  dashboard_repository.py  forecast_repository.py  metadata_repository.py  user_action_repository.py
backend/app/schemas/: __init__.py  dashboard.py  events.py  filters.py  forecasts.py  health.py  shared.py
backend/app/services/: __init__.py  dashboard_service.py  forecast_client.py  forecast_service.py  health_service.py  metadata_service.py  user_action_service.py
backend/tests/: conftest.py  test_alembic_migration.py  test_api_endpoints.py  test_dashboard_service.py  test_ensure_demo_data.py  test_forecast_service.py  test_health_service.py  test_helpers.py  test_metadata_service.py  test_seed_demo_data.py  test_user_action_service.py
forecast-service/: Dockerfile  pyproject.toml
forecast-service/app/: main.py
forecast-service/app/api/: routes.py
forecast-service/app/core/: settings.py
forecast-service/app/services/: forecasting.py
forecast-service/tests/: test_forecasting.py
(+104 files in other folders)
