[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-monitor-api"
version = "0.1.0"
description = "FastAPI backend for the energy monitor demo"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pymongo>=4.8,<5.0",
  "psycopg[binary]>=3.2,<4.0",
  "pytest>=8.3,<9.0",
  "sqlalchemy>=2.0.36,<3.0",
  "structlog>=24.4,<25.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.3,<3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
